--- a/index.html
+++ b/index.html
@@ -24,69 +24,21 @@
     <div id="menu-button"><img src="images/menu-icon.svg" alt="menu"></div>
     <menu>
         <li><a href="#">Home</a></li>
-        <li><a href="#aboutme">About me</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#projects">Projects</a></li>
+        <li><a href="#aboutme" class="disabled">About me</a></li>
+        <li><a href="#experience" class="disabled">Experience</a></li>
+        <li><a href="#projects" class="disabled">Projects</a></li>
     </menu>
     <landing>
         <h1>Benedek</h1>
     </landing>
     <hr>
 
-    <div id="aboutme">
-        <h3>About Me</h3>
-        <p>Hi! ^.^ <br> this page needs a bit more work...</p>
-        <!--TODO write something interesting about myself :) -->
-    </div>
-    <hr>
-
-    <div id="experience">
-        <h3>Experiences</h3>
-        <p>I have a few :3 <br> </p>
-        <!--TODO make a collection about the languages I know with scroll-driven animations -->
-        <!-- https://scroll-driven-animations.style/ -->
-        <div class="skills">
-            <a class="card" direction="1" speed="4" href="https://html.com/" target="_blank">
-                <img src="images/html5.svg" alt="html">
-                HTML
-            </a>
-            <a class="card" direction="-1" speed="2" href="https://css3.com/" target="_blank">
-                <img src="images/css.svg" alt="css">
-                CSS
-            </a>
-            <a class="card" direction="1" speed="3" href="https://www.php.net/" target="_blank">
-                <img src="images/php.svg" alt="php">
-                PHP
-            </a>
-            <a class="card" direction="1" speed="2" href="https://www.python.org/" target="_blank">
-                <img src="images/python.svg" alt="python">
-                Python
-            </a>
-            <a class="card" direction="-1" speed="2" href="https://www.javascript.com/" target="_blank">
-                <img src="images/js.svg" alt="javascript">
-                JavaScript
-            </a>
-            <a class="card" direction="1" speed="1" href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank" style="letter-spacing: normal;">
-                <img src="images/c-sharp.svg" alt="c-sharp">
-                C Sharp
-            </a>
-            <a class="card" direction="-1" speed="3" href="https://www.mysql.com/" target="_blank">
-                <img src="images/mysql.svg" alt="mysql">
-                MySQL
-            </a>
-        </div>
-    </div>
-    <hr>
-
-    <div id="projects">
-        <h3>Recent projects</h3>
-        <p>What projects?</p>
-        <model-viewer src="models/dragon.glb" camera-controls touch-action="pan-y" disable-zoom style=" width: 100%; height: 50%; object-fit: contain;"></model-viewer>
-        <!--TODO make some scroll animated library about the projects I've done -->
-    </div>
+    <div style="height: 100vh;">
+        <h2 style="line-height: 100vh;">Page under construction</h2>
+    </div> 
 
     <footer>
-        <div id="contact">Contact me:<span style="font-size: 8pt; display: block">(if you want)</span>
+        <div id="contact">Contact me:
             <div id="links">
                 <a href="https://www.instagram.com/szlonkai_benedek/" target="_blank"><img src="images/instagram.svg" alt="Instagram"></a>
                 <a href="https://github.com/Bbenii1" target="_blank"><img src="images/github.svg" alt="Github"></a>
